--- a/game/qml.qrc
+++ b/game/qml.qrc
@@ -1,5 +1,8 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
+        <file>GameArea.qml</file>
+        <file>MainMenu.qml</file>
+        <file>Ball.qml</file>
     </qresource>
 </RCC>
