--- a/game/qml.qrc
+++ b/game/qml.qrc
@@ -5,5 +5,6 @@
         <file>MainMenu.qml</file>
         <file>Ball.qml</file>
         <file>Block.qml</file>
+        <file>models/box.obj</file>
     </qresource>
 </RCC>
