--- a/game/qml.qrc
+++ b/game/qml.qrc
@@ -7,5 +7,6 @@
         <file>Block.qml</file>
         <file>models/box.obj</file>
         <file>MainMenuButton.qml</file>
+        <file>models/box.png</file>
     </qresource>
 </RCC>
