--- a/game/qml.qrc
+++ b/game/qml.qrc
@@ -4,9 +4,9 @@
         <file>GameArea.qml</file>
         <file>MainMenu.qml</file>
         <file>Ball.qml</file>
-        <file>Block.qml</file>
         <file>models/box.obj</file>
         <file>MainMenuButton.qml</file>
         <file>models/box.png</file>
+        <file>Scene.qml</file>
     </qresource>
 </RCC>
