Ball is added; textures and camera view are changed.

--- a/game/game.qrc
+++ b/game/game.qrc
@@ -5,15 +5,17 @@
         <file>main.qml</file>
         <file>assets/carpet.obj</file>
         <file>assets/carpet.png</file>
-        <file>assets/room.obj</file>
-        <file>assets/room.png</file>
         <file>assets/ceiling.obj</file>
         <file>assets/ceiling.png</file>
         <file>assets/grid.obj</file>
         <file>assets/grid.png</file>
-        <file>assets/table.obj</file>
         <file>assets/table.png</file>
         <file>assets/racket.png</file>
         <file>assets/racket.obj</file>
+        <file>assets/room.obj</file>
+        <file>assets/room.jpg</file>
+        <file>assets/table.obj</file>
+        <file>assets/ball.obj</file>
+        <file>assets/ball.png</file>
     </qresource>
 </RCC>
