Input handler added to qrc

--- a/game/game.qrc
+++ b/game/game.qrc
@@ -17,5 +17,6 @@
         <file>assets/table.obj</file>
         <file>assets/ball.obj</file>
         <file>assets/ball.png</file>
+        <file>InputHandler.qml</file>
     </qresource>
 </RCC>
